# genome-assembler

./: LICENSE  README.md
src/: Assembler.cpp  Assembler.h  AssemblerException.cpp  AssemblerException.h  CMakeLists.txt  DBG.cpp  DBG.h  DBGFactory.cpp  DBGFactory.h  DNA.cpp  DNA.h  ErrorCorrector.cpp  ErrorCorrector.h  FastaParser.cpp  FastaParser.h  Readme.md  main.cpp
